applied a min-width of 4.3em to Year dropdown to avoid overflow when zoomed

--- a/packages/lab/src/calendar/CalendarNavigation.css
+++ b/packages/lab/src/calendar/CalendarNavigation.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+.saltCalendarNavigation-yearDropdown {
+  min-width: 4.3em;
+}
+
 .saltCalendarNavigation-hideYearDropdown {
   grid-template-columns: min-content auto min-content;
   grid-gap: var(--salt-spacing-300);
